--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/BSsfjHCFosw/?autoplay=1" frameborder="0" allowfullscreen></iframe>
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/BSsfjHCFosw/?autoplay=1" frameborder="0" allowfullscreen></iframe> -->
 
 <!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
